--- a/src/CentralPackageManagementMigrator.Runner/CentralPackageManagementMigrator.Runner.csproj
+++ b/src/CentralPackageManagementMigrator.Runner/CentralPackageManagementMigrator.Runner.csproj
@@ -4,6 +4,14 @@
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<RootNamespace>CentralPackageManagementMigrator.Runner</RootNamespace>
+		<AssemblyName>CentralPackageManagementMigrator.Runner</AssemblyName>
+		<PackAsTool>true</PackAsTool>
+		<ToolCommandName>CpmMigrator</ToolCommandName>
+		<Version>0.1.0</Version>
+		<Authors>ofshvartz</Authors>
+		<Description>Tool to migrate .net project to use Central Package Management</Description>
+		<Title>CentralPackageManagementMigrator</Title>
 	</PropertyGroup>
 
 
