--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,12 +18,10 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
-        source-url: https://api.nuget.org/v3/index.json
-      env:
-        NUGET_AUTH_TOKEN: ${{secrets.NUGET_KEY}}
     - name: Build
       run: dotnet build -c Release 
     - name: Generate a NuGet package
       run: dotnet pack --no-build -c Release -o .
     - name: Push to GitHub package registry
-      run: dotnet nuget push *.nupkg
+      run: nuget push **\*.nupkg -Source 'https://api.nuget.org/v3/index.json' -ApiKey ${{secrets.NUGET_KEY}}
+
