--- a/src/CentralPackageManagementMigrator.Runner/CentralPackageManagementMigrator.Runner.csproj
+++ b/src/CentralPackageManagementMigrator.Runner/CentralPackageManagementMigrator.Runner.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
@@ -8,7 +8,8 @@
 		<AssemblyName>CentralPackageManagementMigrator.Runner</AssemblyName>
 		<PackAsTool>true</PackAsTool>
 		<ToolCommandName>CpmMigrator</ToolCommandName>
-		<Version>0.2.0</Version>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<Version>0.2.1</Version>
 		<Authors>oshvartz</Authors>
 		<Owner>oshvartz</Owner>
 		<Description>Tool to migrate solution to use Central Package Management</Description>
@@ -25,6 +26,7 @@
 		<PackageReference Include="CommandLineParser" Version="2.9.1" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+		<None Include="docs\README.md" Pack="true" PackagePath="\"/>
 	</ItemGroup>
 
 </Project>
